# test_mcp_server

./: README.md  client.py  client_with_ui.py  local_server.py  pyproject.toml
